feat(assets): 素材库 - 增加项目关联管理
